Closed
Bug 211788
Opened 22 years ago
Closed 22 years ago
GTK - Universal prompt should invert buttons order
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mpgritti, Assigned: mpgritti)
References
Details
(Whiteboard: fixed1.5b)
Attachments
(1 file)
|
907 bytes,
patch
|
bryner
:
review+
blizzard
:
superreview+
asa
:
approval1.4.1-
asa
:
approval1.5b+
|
Details | Diff | Splinter Review |
Unlike other dialogs the universal one show the buttons in left to right order.
The GNOME HIG require the buttons to be showed right to left.
To reproduce try to login in bugzilla with a random user name, the passoword
storing confirmation dialog will be showed.
Order is Yes, No, Never, but it should be Never, No, Yes.
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #127084 -
Flags: review?(bryner)
Comment 2•22 years ago
|
||
Comment on attachment 127084 [details] [diff] [review]
Invert the order and set default response to 0 (gtk by default would use the first added button)
sr=blizzard
Attachment #127084 -
Flags: superreview+
Comment 3•22 years ago
|
||
Hmm, aren't there a lot of other dialogs that use the non-HIG ordering of
buttons? I must be misunderstanding something here. Bug 110647 also requests
that Mozilla should follow GNOME's HIG in this regard, giving a random example
of a dialog that doesn't follow it.
Comment 4•22 years ago
|
||
Ahaa, embedding. Ignore me.
Comment 5•22 years ago
|
||
Comment on attachment 127084 [details] [diff] [review]
Invert the order and set default response to 0 (gtk by default would use the first added button)
The reason I didn't do this is because we can't really make any assumptions
about the function of the buttons in this method. The HIG gives the button
positions by function, i.e. the confirmation button in the lower right, cancel
to the left of it.
However, I don't think this hurts anything and it seems to be the right thing
for most/all of our dialogs, so r=bryner.
Attachment #127084 -
Flags: review?(bryner) → review+
| Assignee | ||
Comment 6•22 years ago
|
||
Can someone commit this ? It has s/sr but I dont have cvs access. Thanks.
| Assignee | ||
Comment 7•22 years ago
|
||
Comment on attachment 127084 [details] [diff] [review]
Invert the order and set default response to 0 (gtk by default would use the first added button)
While this is not a critical issue the patch is simple enough to not be risky.
The impact is also limited (only gtkmozembed users). HIG compliance is very
important for GNOME applications like epiphany and galeon.
I'm requesting approval also for 1.4.x because Epiphany (GNOME 2.4 browser)
will be based on that.
Attachment #127084 -
Flags: approval1.5b?
Attachment #127084 -
Flags: approval1.4.x?
Comment 8•22 years ago
|
||
Comment on attachment 127084 [details] [diff] [review]
Invert the order and set default response to 0 (gtk by default would use the first added button)
a=asa (on behalf of drivers) for checkin to Mozilla 1.5beta. Will wait to
evaluate for 1.4.1 until it proves itself on the trunk.
Attachment #127084 -
Flags: approval1.5b? → approval1.5b+
checked into trunk
Assignee: blizzard → mpeseng
Summary: Universal prompt should invert buttons order → GTK - Universal prompt should invert buttons order
| Assignee | ||
Comment 10•22 years ago
|
||
Verified the checkin. Leaving this open until I got approval for 1.4.x
Updated•22 years ago
|
Whiteboard: fixed1.5b
Comment 11•22 years ago
|
||
please resolve fixed bugs when they're fixed on the trunk. until a bug is
resolved and verified on the trunk, it's not going to be seriously evaluated as
a potential branch fix.
| Assignee | ||
Comment 12•22 years ago
|
||
Fixed on trunk
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 13•22 years ago
|
||
Comment on attachment 127084 [details] [diff] [review]
Invert the order and set default response to 0 (gtk by default would use the first added button)
This is not going to make 1.4.1. Please re-request aproval after 1.4.1 ships
if you'd like to get this in for 1.4.2.
Attachment #127084 -
Flags: approval1.4.x? → approval1.4.x-
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•