Bug 211788 GTK - Universal prompt should invert buttons order patch by mpeseng@tin.it r=bryner sr=blizzard a=asa